Адаптивные декор элементы

--- a/source/less/blocks/agitation.less
+++ b/source/less/blocks/agitation.less
@@ -24,6 +24,10 @@
     line-height: 30px;
     max-width: 440px;
   }
+
+  .agitation__text br {
+    display: none;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -34,6 +38,5 @@
 
   .agitation__text {
     max-width: 575px;
-    padding-left: 152px;
   }
 }
