--- a/source/less/blocks/logo-wrapper.less
+++ b/source/less/blocks/logo-wrapper.less
@@ -1,14 +1,15 @@
-.logo-wrapper {
-  height: 70px;
-  // border-bottom: 1px solid #000000;
-}
+// .logo-wrapper {
+//   // border-bottom: 1px solid #000000;
+// }
 
-@media (min-width: @tablet-width) {
-  .logo-wrapper {
-    height: 110px;
-  }
-}
-// @media (min-width: @desktop-width) {
+// @media (min-width: @tablet-width) {
 //   .logo-wrapper {
+//     padding: 28px 20px 35px;
 //   }
 // }
+
+// }
+// // @media (min-width: @desktop-width) {
+// //   .logo-wrapper {
+// //   }
+// // }
