--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -94,13 +94,9 @@
   }
 
   .main-nav {
+    padding: 29px 0;
     display: flex;
-    max-width: 940px;
-    margin: 0 auto;
-  }
-
-  .main-nav__wrapper {
-    margin-top: 47px;
-    margin-left: 97px;
+    justify-content: space-between;
+    align-items: center;
   }
 }
