--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -1,16 +1,15 @@
 .offer {
   &__header {
     text-align: center;
+    max-width: 280px;
+    margin: 0 auto;
     margin-bottom: 56px;
   }
 
   &__opportunity {
-    background-color: #f2f2f2;
-  }
-
-  &__opportunity-wrapper {
     // margin: 0 auto;
     padding-top: 93px;
+    background-color: #f2f2f2;
   }
 
   &__question {
@@ -32,10 +31,14 @@
   }
 
   &__image {
-    text-align: center;
     min-height: 278px;
     background: url("../img/iphone-screen-mobile@1x.png") no-repeat 50% 0;
     margin-top: 40px;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background: url("../img/iphone-screen-mobile@2x.png") no-repeat 50% 0;
+      background-size: 157px;
+    }
   }
 
 
@@ -44,22 +47,22 @@
   }
 }
 
+.offer__item {
+  width: 280px;
+  margin: 0 auto;
+}
 
 .offer__slogan-gap {
   display: none;
 }
 
-@media (min-width: 660px) {
+@media (min-width: @tablet-width) {
+  .offer__wrapper {
+    background-color: #f2f2f2;
+  }
+
   .offer__opportunity {
-    display: flex;
     margin-bottom: 51px;
-  }
-
-  .offer__header {
-    margin: 0;
-  }
-
-  .offer__opportunity-wrapper {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -67,6 +70,10 @@
     position: relative;
     // margin-right: 20px;
     padding: 0;
+  }
+
+  .offer__header {
+    max-width: 600px;
   }
 
   .offer__slogan-gap {
@@ -86,7 +93,6 @@
 
   .offer__opportunity-image {
     width: 300px;
-    outline: 2px solid teal;
   }
 
   .offer__opportunity-image-time {
@@ -102,23 +108,27 @@
     width: 300px;
     height: 486px;
     background: url("../img/iphone-screen-3-tablet@1x.png") no-repeat;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background: url("../img/iphone-screen-3-tablet@2x.png") no-repeat 0 0;
+      background-size: 267px;
+    }
   }
 
   .offer__item {
-    outline: 2px solid tomato;
     width: 320px;
     margin-top: 108px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .offer__wrappaer {
-    background-color: #f2f2f2;
+  .offer__wrapper {
     margin-top: 90px;
   }
 
   .offer__header {
     background-color: #ffffff;
+    max-width: 750px;
   }
 
   .offer__opportunity {
@@ -172,6 +182,11 @@
     left: 50%;
     top: 50px;
     background: url("../img/iphone-screen-1-desktop@1x.png") no-repeat 50% 0%;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background: url("../img/iphone-screen-1-desktop@2x.png") no-repeat 50% 0%;
+      background-size: 292px;
+    }
   }
 
   .offer__item-image-2::before {
@@ -182,6 +197,11 @@
     left: 50%;
     top: 50px;
     background: url("../img/iphone-screen-2-desktop@1x.png") no-repeat 75% 0%;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background: url("../img/iphone-screen-2-desktop@2x.png") no-repeat 75% 0%;
+      background-size: 292px;
+    }
   }
 
   .offer__item-image-3::before {
@@ -192,6 +212,11 @@
     left: 50%;
     top: 50px;
     background: url("../img/iphone-screen-3-desktop@1x.png") no-repeat 85% 0;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background: url("../img/iphone-screen-3-desktop@2x.png") no-repeat 85% 0;
+      background-size: 292px;
+    }
   }
 
   .offer__image {
