--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -12,7 +12,7 @@
     text-align: center;
 
     padding-top: 31px;
-    max-width: 190px;
+    max-width: 280px;
     margin: 0 auto;
   }
 
@@ -38,8 +38,12 @@
 }
 
 @media (min-width: @tablet-width) {
+  .page-header {
+    margin: 0 -20px;
+  }
+
   .page-header__logo {
-    padding: 44px 93px;
+    padding: 27px 19px 36px;
   }
 
   .page-header__title {
@@ -55,8 +59,12 @@
 }
 
 @media (min-width: @desktop-width) {
+  .page-header {
+    margin: 0;
+  }
+
   .page-header__logo {
-    padding: 27px 76px;
+    padding: 0;
   }
 
   .page-header__photo {
@@ -65,6 +73,6 @@
 
   .page-header__title {
     padding-top: 63px;
-    padding-left: 151px;
+    max-width: 750px;
   }
 }
