--- a/source/less/blocks/content.less
+++ b/source/less/blocks/content.less
@@ -1,8 +1,4 @@
 .content {
-  position: relative;
-}
-
-.content__wrapper {
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 23%;
@@ -14,8 +10,24 @@
   }
 }
 
+.content__photo {
+  margin-top: 326px;
+}
+
+.content__title {
+  color: #ffffff;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 300;
+  text-align: center;
+
+  padding-top: 31px;
+  max-width: 280px;
+  margin: 0 auto;
+}
+
 @media (min-width: @tablet-width) {
-  .content__wrapper {
+  .content {
     background: url("../img/bg-back-tablet@1x.jpg") no-repeat 50% 28%;
     background-size: 1203px;
 
@@ -23,14 +35,34 @@
       background: url("../img/bg-back-tablet@2x.jpg");
     }
   }
+
+  .content__photo {
+    margin-top: 366px;
+  }
+
+  .content__title {
+    font-size: 50px;
+    line-height: 60px;
+    padding-top: 69px;
+    max-width: 620px;
+  }
 }
 
 @media (min-width: @desktop-width) {
-  .content__wrapper {
+  .content {
     background: url("../img/bg-back-desktop@1x.jpg") no-repeat 45% 0%;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background: url("../img/bg-back-desktop@2x.jpg");
     }
+  }
+
+  .content__photo {
+    margin: 0;
+  }
+
+  .content__title {
+    padding-top: 63px;
+    max-width: 750px;
   }
 }
