--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -56,7 +56,7 @@
 
   .page-footer__wrapper {
     min-height: 128px;
-    width: 620px;
+    max-width: 620px;
     margin: 0 auto;
     outline: 2px solid green;
     display: flex;
@@ -96,7 +96,7 @@
 
 @media (min-width: @desktop-width) {
   .page-footer__wrapper {
-    width: 940px;
+    max-width: 940px;
   }
 
   .page-footer__develop-link {
