--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -34,14 +34,19 @@
   display: block;
   color: #283645;
   line-height: 18px;
+
+  // background: url("../img/htmlacademy2.svg") no-repeat 74% 16px;
 }
+// .page-footer__develop-link::after{
+//   content: "";
+//   display: block;
+// }
 
 .page-footer__develop-link-icon {
-  position: absolute;
-  top: -8px;
-  right: 11px;
-  width: 47px;
-  height: 41px;
+
+
+  // width: 47px;
+  // height: 41px;
 }
 
 @media (min-width: 660px) {
@@ -89,8 +94,8 @@
     position: absolute;
     top: 7px;
     right: -10px;
-    width: 47px;
-    height: 41px;
+    // width: 47px;
+    // height: 41px;
   }
 }
 
