--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -13,9 +13,7 @@
   }
 
   &__develop {
-    width: 150px;
-    height: 40px;
-    padding-left: 19px;
+    width: 154px;
   }
 
   &--index {
@@ -37,6 +35,7 @@
 
   // background: url("../img/htmlacademy2.svg") no-repeat 74% 16px;
 }
+
 // .page-footer__develop-link::after{
 //   content: "";
 //   display: block;
@@ -82,6 +81,8 @@
 
   .page-footer__develop {
     padding: 0;
+    padding-top: 21px;
+    text-align: right;
   }
 
   .page-footer__develop-link {
@@ -91,11 +92,9 @@
   }
 
   .page-footer__develop-link-icon {
-    position: absolute;
-    top: 7px;
-    right: -10px;
-    // width: 47px;
-    // height: 41px;
+    width: 27px;
+    vertical-align: middle;
+    margin-left: 8px;
   }
 }
 
@@ -106,7 +105,6 @@
 
   .page-footer__develop-link {
     padding: 0;
-    padding-top: 20px;
     font-size: 18px;
   }
 }
