--- a/source/less/blocks/opportunity.less
+++ b/source/less/blocks/opportunity.less
@@ -1,115 +1,42 @@
 .opportunity {
-  margin-bottom: 32px;
-
   &__item-head {
-    text-align: center;
     margin: 0;
-    margin-bottom: 11px;
+    padding-bottom: 22px;
     font-size: 18px;
     line-height: 24px;
-    font-weight: 700;
+    font-weight: bold;
+    text-align: center;
     color: #283645;
   }
 
   &__item-body {
     margin: 0;
+    padding-bottom: 40px;
     text-align: center;
-    letter-spacing: 0;
     color: #283645;
-  }
-}
-
-.opportunity__item-head--gap {
-  display: none;
-}
-
-@media (min-width: 660px) {
-  .opportunity {
-
-    margin-bottom: 34px;
-    padding-left: 10px;
-  }
-
-  .opportunity--time {
-    width: 310px;
-    outline: 2px solid tomato;
-    text-align: left;
-  }
-
-  .opportunity__item-body {
-    text-align: left;
-  }
-
-  .opportunity__item-head {
-    text-align: left;
-    margin-bottom: 12px;
-  }
-
-  .opportunity__item-head--time {
-    padding-top: 37px;
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 36px;
   }
 
   .opportunity__link {
     color: pink;
-    margin-top: 7px;
-    display: block;
   }
 }
 
-@media (min-width: @desktop-width) {
+@media (min-width: 660px) {
   .opportunity {
     width: 300px;
-    padding: 0;
-    outline: 2px solid tomato;
-
-    &__item-head-time {
-      text-align: left;
-    }
-  }
-
-  .opportunity--time {
-    width: 580px;
-  }
-
-  .opportunity__item-head {
-    text-align: center;
-    font-size: 30px;
-    line-height: 30px;
-    font-weight: 700;
-    margin-top: 8px;
-    margin-bottom: 25px;
-  }
-
-  .opportunity__item-head--time {
-    text-align: left;
-    padding-top: 87px;
-  }
-
-  .opportunity__item-head--gap {
-    display: block;
-  }
-
-  .opportunity__link {
-    font-size: 18px;
-    line-height: 30px;
-    color: #d22856;
-    margin-top: 31px;
   }
 
   .opportunity__item-body {
-    text-align: center;
-    font-size: 18px;
-    line-height: 30px;
-    width: 240px;
-    margin: 0 auto;
+    text-align: left;
   }
 
-  .opportunity__item-body--time {
+  .opportunity__item-head {
     text-align: left;
-    margin: 0;
-    width: auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .opportunity--qwerty {
+    width: 570px;
   }
 }
