--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,34 +1,36 @@
 .page-main {
-  // margin: 0 auto;
+  margin: 0 auto;
 
   .page-main__logo-image--panorama {
     width: 100%;
   }
-}
 
-.page-main__wrapper {
-  max-width: 280px;
-  margin: 0 auto;
-}
-
-.page-main__form {
-  width: 15px;
-  height: 15px;
-  background: red;
-}
-
-@media (min-width: 660px) {
   .page-main__wrapper {
-    max-width: 620px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    max-width: 280px;
+    margin: 0 auto;
   }
 }
 
-@media (min-width: @desktop-width) {
-  .page-main__wrapper {
-    max-width: 940px;
-    padding: 0;
+@media (min-width: 660px) {
+  .page-main {
+    max-width: 660px;
+    margin: 0 auto;
+
+    .page-main__wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      max-width: 620px;
+      justify-content: space-between;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-main {
+    max-width: 1200px;
+
+    .page-main__wrapper {
+      max-width: 940px;
+    }
   }
 }
