--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -1,24 +1,22 @@
 .photo {
   &__wrapper-image {
-    // background-image: url("../img/bg-back-mobile@1x.jpg");
-    // background-color: #2b3b4b;
-    // background-repeat: no-repeat;
-    min-height: 170px;
+    background-image: url("../img/bg-back-mobile@1x.jpg");
+    background-color: #2b3b4b;
+    background-repeat: no-repeat;
+    height: 170px;
   }
 }
 
 @media (min-width: 660px) {
   .photo__wrapper-image {
-    min-height: 329px;
-    // background: url("../img/bg-back-tablet@1x.jpg");
+    height: 320px;
+    background: url("../img/bg-back-tablet@1x.jpg");
   }
 }
 
-@media (min-width: @desktop-width) {
+@media (min-width: 1200px) {
   .photo__wrapper-image {
-    min-height: 284px;
-    padding-top: 110px;
-
-    // background: url("../img/bg-back-desktop@1x.jpg");
+    height: 390px;
+    background: url("../img/bg-back-desktop@1x.jpg");
   }
 }
