--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -122,11 +122,12 @@
 }
 
 @media (min-width: @desktop-width) {
-  .offer__wrapper {
-    margin-top: 90px;
+  .offer__wrapper--time{
+    background-color: #f2f2f2;
   }
 
   .offer__header {
+    margin-bottom: 89px;
     background-color: #ffffff;
     max-width: 750px;
   }
