--- a/source/less/blocks/logo-wrapper.less
+++ b/source/less/blocks/logo-wrapper.less
@@ -1,3 +1,15 @@
-.logo-wrapper {
-  height: 65px;
-}
+// .logo-wrapper {
+//   // border-bottom: 1px solid #000000;
+// }
+
+// @media (min-width: @tablet-width) {
+//   .logo-wrapper {
+//     padding: 28px 20px 35px;
+//   }
+// }
+
+// }
+// // @media (min-width: @desktop-width) {
+// //   .logo-wrapper {
+// //   }
+// // }
