--- a/source/less/blocks/user-photo.less
+++ b/source/less/blocks/user-photo.less
@@ -1,6 +1,5 @@
 .user-photo {
-  width: 280px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 
   &__comment {
     background-color: #f2f2f2;
@@ -10,42 +9,91 @@
     text-transform: uppercase;
     background-color: #d22856;
     color: #ffffff;
+    position: absolute;
+    top: 0;
+    right: 20px;
+    margin: 0;
+    font-size: 12px;
+    line-height: 35px;
+    width: 140px;
+    height: 36px;
+    padding-left: 21px;
+    box-sizing: border-box;
   }
+}
+
+.user-photo__picture {
+  position: relative;
+  margin-bottom: -7px;
 }
 
 .user-photo--panorama {
   width: 100%;
-  margin-bottom: 50px;
 }
 
 .user-photo__comment-panorama {
-  width: 280px;
+  max-width: 280px;
+  padding-bottom: 0;
   margin: 0 auto;
 }
 
-@media (min-width: 660px) {
+.user-photo__comment-wrapper {
+  position: relative;
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+}
+
+
+@media (min-width: @tablet-width) {
   .user-photo {
     width: 300px;
+    margin-bottom: 20px;
+  }
 
-    .user-photo__comment-panorama {
-      min-width: 620px;
-      margin: 0 auto;
-    }
+  .user-photo__comment {
+    padding-bottom: 9px;
+    position: relative;
+  }
+
+  .user-photo__comment-panorama {
+    padding-bottom: 0;
+    max-width: 620px;
   }
 
   .user-photo--panorama {
     width: 100%;
+    margin-bottom: 50px;
+  }
+
+  .user-photo__name {
+    top: 57px;
+    right: 40px;
+    font-weight: bold;
+  }
+
+  .user-photo__comment-wrapper {
+
+    padding-left: 27px;
+    padding-bottom: 14px;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: @desktop-width) {
   .user-photo {
-    .user-photo__comment-panorama {
-      min-width: 940px;
-    }
+    margin-bottom: 55px;
   }
 
   .user-photo--panorama {
     width: 100%;
+    margin-bottom: 25px;
+  }
+
+  .user-photo__item {
+    outline: 2px solid red;
+  }
+
+  .user-photo__comment-panorama {
+    max-width: 940px;
   }
 }
