--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,28 +1,102 @@
 .main-nav {
-  background-color: #283645;
+  position: relative;
 }
 
 .main-nav__toggle {
-  display: none;
+  position: absolute;
+  top: 15px;
+  right: 16px;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  border: none;
+  background: transparent;
 }
 
-@media (min-width: 660px) {
-  .main-nav__toggle {
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+
+  position: absolute;
+  top: 15px;
+  left: 17px;
+
+  width: 36px;
+  height: 2px;
+
+  background-color: #ffffff;
+  box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff;
+}
+
+// .main-nav--closed .main-nav__toggle:active::before {
+//   background-color: rgba(255, 255, 255, 0.3);
+//   box-shadow: 0 8px 0 0 rgba(255, 255, 255, 0.3), 0 16px 0 0 rgba(255, 255, 255, 0.3);
+// }
+
+.main-nav--opened .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 5px;
+  width: 30px;
+  height: 5px;
+  background-color: #ffffff;
+  transform: rotate(-45deg);
+}
+
+.main-nav--opened .main-nav__toggle::after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 5px;
+  width: 30px;
+  height: 5px;
+  background-color: #ffffff;
+  transform: rotate(45deg);
+  // &:active::before,
+  // &:active::after {
+  //   background-color: rgba(255, 255, 255, 0.3);
+  // }
+}
+
+@media (max-width: 959px) {
+  .main-nav--closed .site-list__item {
     display: none;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: @tablet-width) {
+  .main-nav__toggle {
+    right: 36px;
+    top: 28px;
+  }
+
+  .main-nav--opened .main-nav__toggle::before {
+    top: 26px;
+    left: 25px;
+  }
+
+  .main-nav--opened .main-nav__toggle::after {
+    top: 26px;
+    left: 25px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__toggle {
+    display: none;
+  }
+
   .main-nav__list {
+    outline: 2px solid red;
     display: flex;
+    width: 620px;
+    justify-content: space-between;
   }
 
   .main-nav {
+    padding: 29px 0;
     display: flex;
-    background-color: #0f151b;
-  }
-
-  .main-nav__wrapper {
-    padding-left: 160px;
+    justify-content: space-between;
+    align-items: center;
   }
 }
