--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -1,62 +1,123 @@
 .offer {
+  &__header {
+    text-align: center;
+    max-width: 280px;
+    margin: 0 auto;
+    margin-bottom: 56px;
+  }
+
   &__opportunity {
+    // margin: 0 auto;
+    padding-top: 93px;
     background-color: #f2f2f2;
-    padding-top: 50px;
   }
 
   &__question {
-    padding-top: 46px;
-    padding-bottom: 37px;
-    margin: 0;
+    margin-top: 40px;
+    margin-bottom: 33px;
     font-size: 24px;
+    font-weight: 300;
+    line-height: 28px;
     color: #283645;
   }
 
   &__slogan {
     margin: 0;
-    padding-bottom: 50px;
+    margin-bottom: 25px;
     font-size: 24px;
+    line-height: 26px;
+    font-weight: 300;
     color: #283645;
   }
 
   &__image {
-    text-align: center;
+    min-height: 278px;
+    background: url("../img/iphone-screen-mobile@1x.png") no-repeat 50% 0;
+    margin-top: 40px;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background: url("../img/iphone-screen-mobile@2x.png") no-repeat 50% 0;
+      background-size: 157px;
+    }
   }
 
-  &__header {
-    text-align: center;
-  }
 
-  &__opportunity--qwerty {
+  &__opportunity--time {
     display: none;
   }
 }
 
-@media (min-width: 660px) {
+.offer__item {
+  width: 280px;
+  margin: 0 auto;
+}
+
+.offer__slogan-gap {
+  display: none;
+}
+
+@media (min-width: @tablet-width) {
+  .offer__wrapper {
+    background-color: #f2f2f2;
+  }
+
   .offer__opportunity {
+    margin-bottom: 51px;
     display: flex;
-  }
-
-  .offer__opportunity-wrapper {
-    display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
-    width: 620px;
-    margin-right: 20px;
+    width: auto;
+    position: relative;
+    // margin-right: 20px;
+    padding: 0;
   }
 
-  .offer__question,
+  .offer__header {
+    max-width: 600px;
+  }
+
+  .offer__slogan-gap {
+    display: block;
+  }
+
+  .offer__question {
+    font-size: 40px;
+    margin-top: 60px;
+    margin-bottom: 21px;
+  }
+
   .offer__slogan {
     font-size: 40px;
+    line-height: 24px;
   }
 
   .offer__opportunity-image {
-    height: 280px;
     width: 300px;
-    background: url("../img/icon-timer.svg") no-repeat;
   }
 
-  .offer__opportunity--qwerty {
+  .offer__opportunity-image-time {
+    width: 240px;
+    height: 280px;
+  }
+
+  .offer__opportunity--time {
     background: #ffffff;
+  }
+
+  .offer__image {
+    width: 300px;
+    height: 486px;
+    background: url("../img/iphone-screen-3-tablet@1x.png") no-repeat;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background: url("../img/iphone-screen-3-tablet@2x.png") no-repeat 0 0;
+      background-size: 267px;
+    }
+  }
+
+  .offer__item {
+    width: 320px;
+    margin-top: 108px;
   }
 }
 
@@ -67,20 +128,46 @@
   }
 
   .offer__opportunity {
-    margin: 0 auto;
+    margin-bottom: 28px;
   }
 
-  .offer__opportunity-wrapper {
-    width: 940px;
-    margin: 0 auto;
+  .offer__opportunity-image {
+    width: 370px;
+  }
+
+  .offer__question {
+    font-size: 50px;
+    margin-top: 86px;
+    margin-bottom: 35px;
+  }
+
+  .offer__slogan {
+    font-size: 50px;
+  }
+
+  .offer__slogan-gap {
+    line-height: 36px;
   }
 
   .offer__item {
+    margin: 0;
+    width: 940px;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 
-  .offer__opportunity--qwerty {
+  .offer__opportunity-gap {
+    display: none;
+  }
+
+  .offer__opportunity--time {
     background-color: #f2f2f2;
+  }
+
+  .offer__opportunity-image-time {
+    width: 300px;
+    height: 355px;
   }
 
   .offer__item-image-1::before {
@@ -90,7 +177,12 @@
     height: 350px;
     left: 50%;
     top: 50px;
-    background: url("../img/iphone-screen-1-desktop@1x.png") no-repeat;
+    background: url("../img/iphone-screen-1-desktop@1x.png") no-repeat 50% 0%;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background: url("../img/iphone-screen-1-desktop@2x.png") no-repeat 50% 0%;
+      background-size: 292px;
+    }
   }
 
   .offer__item-image-2::before {
@@ -100,7 +192,12 @@
     height: 350px;
     left: 50%;
     top: 50px;
-    background: url("../img/iphone-screen-2-desktop@1x.png") no-repeat;
+    background: url("../img/iphone-screen-2-desktop@1x.png") no-repeat 75% 0%;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background: url("../img/iphone-screen-2-desktop@2x.png") no-repeat 75% 0%;
+      background-size: 292px;
+    }
   }
 
   .offer__item-image-3::before {
@@ -110,7 +207,12 @@
     height: 350px;
     left: 50%;
     top: 50px;
-    background: url("../img/iphone-screen-3-desktop@1x.png") no-repeat;
+    background: url("../img/iphone-screen-3-desktop@1x.png") no-repeat 85% 0;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background: url("../img/iphone-screen-3-desktop@2x.png") no-repeat 85% 0;
+      background-size: 292px;
+    }
   }
 
   .offer__image {
