--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,6 +1,7 @@
 .site-list {
   padding: 0;
   margin: 0;
+  background: #283645;
 
   &__item {
     text-transform: uppercase;
@@ -9,14 +10,23 @@
     line-height: 32px;
     list-style: none;
     text-align: center;
-    padding: 25px;
+    padding: 15px;
     border-bottom: 1px solid #000001;
     border-top: 1px solid #485461;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: @desktop-width) {
+  .site-list {
+    background: transparent;
+  }
+
   .site-list__item {
     border: none;
+    text-transform: none;
+    font-weight: 300;
+    letter-spacing: 0;
+    line-height: 18px;
+    padding: 0;
   }
 }
