--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -94,7 +94,9 @@
   }
 
   .main-nav {
-    padding: 29px 0;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 29px 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
