--- a/source/less/blocks/content.less
+++ b/source/less/blocks/content.less
@@ -29,10 +29,10 @@
 @media (min-width: @tablet-width) {
   .content {
     background: url("../img/bg-back-tablet@1x.jpg") no-repeat 50% 28%;
-    background-size: 1203px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background: url("../img/bg-back-tablet@2x.jpg");
+      background: url("../img/bg-back-tablet@2x.jpg") no-repeat 50% 98%;
+      background-size: 1200px;
     }
   }
 
@@ -53,7 +53,8 @@
     background: url("../img/bg-back-desktop@1x.jpg") no-repeat 45% 0%;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background: url("../img/bg-back-desktop@2x.jpg");
+      background: url("../img/bg-back-desktop@2x.jpg") no-repeat 50%;
+      background-size: 3000px;
     }
   }
 
