--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -9,7 +9,7 @@
   &__social-links {
     width: 150px;
     height: 55px;
-    margin-bottom: 45px;
+    margin-bottom: 40px;
   }
 
   &__develop {
@@ -28,10 +28,12 @@
 }
 
 .page-footer__develop-link {
+  outline: 2px solid green;
   position: relative;
   display: block;
   color: #283645;
   line-height: 18px;
+  margin-left: 11px;
 
   // background: url("../img/htmlacademy2.svg") no-repeat 74% 16px;
 }
@@ -42,13 +44,16 @@
 // }
 
 .page-footer__develop-link-icon {
-
-
-  // width: 47px;
-  // height: 41px;
+  /* position: absolute; */
+  /* outline: 2px solid black; */
+  width: 28px;
+  /* height: 5px; */
+  /* top: 3px; */
+  margin-left: 11px;
+  vertical-align: middle;
 }
 
-@media (min-width: 660px) {
+@media (min-width: @tablet-width) {
   .page-footer {
     padding: 0;
     padding-top: 35px;
@@ -81,13 +86,13 @@
 
   .page-footer__develop {
     padding: 0;
-    padding-top: 21px;
     text-align: right;
   }
 
   .page-footer__develop-link {
     position: relative;
     padding: 16px 0 0 20px;
+    margin: 0;
     display: block;
   }
 
@@ -101,6 +106,10 @@
 @media (min-width: @desktop-width) {
   .page-footer__wrapper {
     max-width: 940px;
+  }
+
+  .page-footer__develop {
+    padding-top: 21px;
   }
 
   .page-footer__develop-link {
