--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -8,7 +8,7 @@
 
   &__opportunity {
     // margin: 0 auto;
-    padding-top: 93px;
+    padding-top: 62px;
     background-color: #f2f2f2;
   }
 
@@ -104,7 +104,6 @@
 
   .offer__opportunity-image::after {
     content: "24";
-    outline: 2px solid;
     position: absolute;
     top: 56px;
     left: 18px;
@@ -192,6 +191,7 @@
 
   .offer__opportunity--time {
     background-color: #f2f2f2;
+    padding-bottom: 52px;
   }
 
   .offer__opportunity-image-time {
@@ -248,7 +248,7 @@
     display: none;
   }
 
-  .offer__wrapper--time {
+  .offer__wrapper-time {
     padding-top: 28px;
     background: #f2f2f2;
   }
