--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,3 +18,10 @@
 @import "blocks/variables.less";
 @import "blocks/social-links.less";
 @import "blocks/content.less";
+@import "blocks/contacts.less";
+@import "blocks/reviews.less";
+@import "blocks/slider.less";
+@import "blocks/map.less";
+@import "blocks/form-competition";
+@import "blocks/tariff.less";
+@import "blocks/form-posting.less";
