--- a/source/less/blocks/logo-wrapper.less
+++ b/source/less/blocks/logo-wrapper.less
@@ -1,15 +1,11 @@
-// .logo-wrapper {
-//   // border-bottom: 1px solid #000000;
-// }
 
-// @media (min-width: @tablet-width) {
-//   .logo-wrapper {
-//     padding: 28px 20px 35px;
-//   }
+// .logo-wrapper::before {
+//   content: "";
+//   position: absolute;
+//   top: 0;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+//   background: red;
+//   opacity: 0.4;
 // }
-
-// }
-// // @media (min-width: @desktop-width) {
-// //   .logo-wrapper {
-// //   }
-// // }
