--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,25 +1,25 @@
-.page-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-
-  &__logo {
-    display: block;
-    padding: 20px;
-  }
+// .page-header {
+//   background: #1e2732;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+// }
+.page-header__logo {
+  display: block;
+  padding: 20px;
 }
 
-.page-header::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #0f1419;
-  opacity: 0.3;
-}
+// .page-header::before {
+//   content: "";
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   background: #0f1419;
+//   opacity: 0.3;
+// }
 
 @media (min-width: @tablet-width) {
   .page-header__logo {
