--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,5 +1,5 @@
 .page-footer {
-  padding-top: 48px;
+  padding-top: 40px;
 
   &__logo {
     width: 150px;
@@ -101,6 +101,9 @@
 }
 
 @media (min-width: @desktop-width) {
+  .page-footer{
+    margin-top: 65px;
+  }
   .page-footer__wrapper {
     max-width: 940px;
     min-height: 110px;
